--- a/doc/src/manual/usman.tex
+++ b/doc/src/manual/usman.tex
@@ -174,7 +174,7 @@
 %%\setcounter{page}{1}
 %\newpage
 %%\pagenumbering{roman}
-%%FIXME: \tableofcontents
+\tableofcontents
 \cleardoublepage
 
 %%\pagestyle{fancy}
@@ -237,12 +237,12 @@
 \nocite{*}
 \bibliographystyle{alpha}
 %% \bibliographystyle{ieeetr}
-%%FIXME: \bibliography{usman-bibl}
+\bibliography{usman-bibl}
 
 %% no need for the following since 'tocbibind' package
 %% \phantomsection
 %% \addcontentsline{toc}{chapter}{\indexname}
-%%FIXME: \printindex
+\printindex
 
 \end{document}
 
