*** empty log message ***

--- a/doc/src/manual/ch-parallel-exec.tex
+++ b/doc/src/manual/ch-parallel-exec.tex
@@ -363,15 +363,13 @@ everywhere else (Figure \ref{fig:inst}).
 
 \subsection{Configuration}
 
-
-
-[General] section:
+Parallel simulation configuration is the \ttt{[General]} section of \ttt{omnetpp.ini}.
 
 \begin{longtable}{|p{6.5cm}|p{7.5cm}|}
 \hline
 \tabheadcol
 \tbf{Entry and default value} & \tbf{Description}\\\hline
-\multicolumn{2}{|l|}{\tbf{[Cmdenv]}}\\\hline
+\multicolumn{2}{|l|}{\tbf{[General]}}\\\hline
 
 parallel-simulation = <true/false>\linebreak
 default: false
