*** empty log message ***

--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -485,7 +485,7 @@ by naming the subdirectory (subdirectories) as well:
 For compatibility, if the display string contains a icon without
 a category (i.e. subdirectory) name, {\opp} tries it as "old/icon" as well.
 
-If you create new or custom icons, you can put FIXME
+%FIXME If you create new or custom icons...
 
 \subsection{Icon size}
 
@@ -666,7 +666,7 @@ cDisplayString *bgDispStr = parentModule()->backgroundDisplayString();
 cDisplayString *gateDispStr = gate("out")->displayString();
 \end{Verbatim}
 
-The \cclass{cDisplayString} utility class lets... FIXME finish
+%FIXME The \cclass{cDisplayString} utility class lets..
 
 As far as \cclass{cDisplayString} is concerned, a display string
 (e.g. \ttt{"p=100,125;i=cloud"}) is a string that consist of several
