--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -505,7 +505,7 @@ Pattern syntax:
   \item \ttt{*} : matches zero or more characters except dot (.)
   \item \ttt{**} : matches zero or more character (any character)
   \item \ttt{\{a-f\}} (set): matches a character in the range a-f
-  \item \ttt{\{^a-f\}} (negated set): matches a character NOT in the range a-f
+  \item \ttt{\{{\textasciicircum}a-f\}} (negated set): matches a character NOT in the range a-f
   \item \ttt{\{38..150\}} (numeric range): any number (i.e. sequence of digits)
     in the range 38..150  (e.g. \ttt{99})
   \item \ttt{[38..150]} (index range): any number in square brackets in the
@@ -544,13 +544,13 @@ as well!
 \subsubsection{Sets, negated sets}
 
 Sets and negated sets can contain several character ranges and also
-enumeration of characters. For example, \ttt{\{_a-zA-Z0-9\}} matches any letter
+enumeration of characters. For example, \ttt{\{\_a-zA-Z0-9\}} matches any letter
 or digit, plus the underscore; \ttt{\{xyzc-f\}} matches any of the characters
 x, y, z, c, d, e, f.
 To include '-' in the set, put it at a position where it cannot be
 interpreted as character range, for example: \ttt{\{a-z-\}} or \ttt{\{-a-z\}}.
 If you want to include '\}' in the set, it must be the first
-character: \ttt{\{\}a-z\}}, or as a negated set: \ttt{\{^\}a-z\}}. A backslash
+character: \ttt{\{\}a-z\}}, or as a negated set: \ttt{\{{\textasciicircum}\}a-z\}}. A backslash
 is always taken as literal backslash (and NOT as escape character)
 within set definitions.
 
@@ -590,7 +590,7 @@ against it), you can add the line
 \end{verbatim}
 
 at the top of (each) old ini file. This will switch back to the old
-behaviour. Since \ttt{#\% old-wildcards} is only provided to ease transition
+behaviour. Since \ttt{\#\% old-wildcards} is only provided to ease transition
 from {\opp} 2.3 to 3.0, it will be removed in some future version.
 
 
